@@ -1,3 +1,9 @@
+2009-01-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/search.c:
+   Refactor with create_replace_dialog().
+
+
 2009-01-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/document.c:
